--- a/biografia.html
+++ b/biografia.html
@@ -142,8 +142,12 @@
                     </li>
                     <li>Lojëra
                         <ul>
-                            <li>CS Go</li>
-                            <li>Shah</li>
+                            <li>CS Go 
+                                <ul><li>Simple (lojtari im i preferuar)</li></ul>
+                            </li>
+                            <li>Shah
+                                <ul><li>Magnus Carlsen (idoli im)</li></ul>
+                            </li>
                             <li>Biliardo</li>
                         </ul>
                     </li>
@@ -181,13 +185,13 @@
                     </td>
                     <td width="25%" align="center"><img src="FOTO3.jpg" width="100%" border=0/>
                         <p>
-                            1 vit Baterist <u>(foto rsc. CincoCavalli Tiranë)</u> <p><b>Nora Istrefi</b></p>
+                            1 vit Baterist <u>(loc.CincoCavalli Tiranë)</u> <p><b>Nora Istrefi</b></p>
                         </p>
 
                     </td>
                     <td width="25%" align="center"><img src="FOTO6.jpg" width="100%" border=0/>
                         <p>
-                            Momentalisht instrumentis universal dhe poashtu baterist i
+                            Momentalisht instrumentist universal dhe baterist i
                         </p><p>
                             <b>Azem Lukaj & bend</b>
                         </p>
